# fflag-check

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/data/: flag_allowlist.rs  known_tools.rs  mod.rs  suspicious_flags.rs
src-tauri/src/models/: mod.rs  scan_report.rs  scan_result.rs
src-tauri/src/reports/: mod.rs  report_generator.rs
src-tauri/src/scanners/: client_settings_scanner.rs  file_scanner.rs  memory_scanner.rs  mod.rs  prefetch_scanner.rs  process_scanner.rs
src/components/: ReportView.tsx  ResultsPanel.tsx  ScanButton.tsx  ScanProgress.tsx
src/hooks/: useScan.ts
src/types/: index.ts
